# GrimoireTome

./: README.md
GrimoireTome/: CMakeLists.txt  Grimoire.cpp  Grimoire.h  Page.cpp  Page.h  Spell.cpp  addspelldialog.cpp  addspelldialog.h  addspelldialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  spell.h  style.qss
